fix(docs-infra): ensure the sidenav backdrop covers the floating ToC (#42787)
Previously, on narrow pages where the sidenav was in `over` mode, the
sidenav's backdrop only covered the main docs content but not the
floating Table of Contents (ToC) on the right. This was inconsistent and
confusing to the user, because they could interact with the ToC and
scroll to different area of the main content while the sidenav and
backdrop were still covering the content.

This commit fixes it by ensuring the sidenav backdrop covers both the
main content and the floating ToC (when present).

Fixes #42778

PR Close #42787

--- a/aio/src/styles/2-modules/toc/_toc.scss
+++ b/aio/src/styles/2-modules/toc/_toc.scss
@@ -18,7 +18,7 @@ $tocMarkerSize: 6;
 }
 
 .toc-container {
-  width: 18%;
+  width: 18vw;
   position: fixed;
   top: 76px;
   right: 0;
